Updated Swagger api
