# swagger.json
@@ -1,85 +1,143 @@
 {
-    "openapi": "3.0.0",
-    "info":{
-        "version":"1.0.0",
-        "description":"API for E-Commerce application",
-        "title":"E-commerce API"
+    "swagger": "2.0",
+    "info": {
+        "version": "1.0.0",
+        "description": "API for E-Commerce application",
+        "title": "E-Com API"
     },
-    "servers":[
-        {
-            "url":"e-com-api-i9yc.onrender.com"
+    "host":"e-com-api-i9yc.onrender.com",
+    "securityDefinitions":{
+        "JWT":{
+            "in":"header",
+            "name":"Authorization",
+            "type":"apiKey"
         }
+    },
+    "tags": [
+        { "name": "Users", "description": "Operations about users" },
+        { "name": "Products", "description": "Operations about products" }
     ],
-
-    "components":
-    {
-        "securitySchemes":
-        {
-            "JWT":
-            {
-                "in":"header",
-                "name":"Authorization",
-                "type": "apiKey"
-            }
-        }
-    },
-
-    "paths":
-    {
-        "/api/products": {
-            "get":
-            {
-                "tags": ["Products"],
-                "summary":"Get Products",
-                "description":"User will get all products",
-                "security":[{"JWT": {} }],
-                "responses":
-                {
-                    "200": {
-                        "description":"OK"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    }
-                }
-            }
-        },
-
-        "/api/users/signin": 
-        {
-            "post":
-            {
+    "paths":{
+        "/api/users/sign-up":{
+            "post":{
                 "tags": ["Users"],
-                "summary":"Login",
-                "description":"User login to get token",
-                "requestBody":
-                {
-                    "content":
+                "summary":"Returns a list of users",
+                "description":"User sign up which expects name, email, password, user type",
+                "parameters":[
                     {
-                        "application/json":{
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "email":{
-                                        "type": "string"
-                                    },
-                                    "password":{
-                                        "type": "string"
-                                    }
+                        "in":"body",
+                        "name":"Body",
+                        "description":"User Credentials",
+                        "schema":{
+                            "type":"object",
+                            "properties":{
+                                "name":{
+                                    "type": "string"
+                                },
+                                "email":{
+                                    "type": "string"
+                                },
+                                "password":{
+                                    "type": "string"
+                                },
+                                "type":{
+                                    "type": "string"
                                 }
                             }
                         }
                     }
-                },
+                ],
                 "responses":{
-                    "200": {
-                        "description":"OK"
+                    "200":{
+                        "description":"User details"
                     },
-                    "400": {
-                        "description": "Incorrect Credentials"
+                    "201": {
+                        "description": "User created successfully",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                            "id": { "type": "integer" },
+                            "name": { "type": "string" },
+                            "email": { "type": "string" },
+                            "type": { "type": "string" }
+                            }
+                        }
+                    },
+                    "400":{
+                        "description":"User not found"
                     }
                 }
             }
+        },
+        "/api/users/sign-in":{
+            "post":{
+                "summary":"User Login",
+                "tags": ["Users"],
+                "description":"User login expects email, password",
+                "parameters":[
+                    {
+                        "in":"body",
+                        "name":"Body",
+                        "description":"User Credentials",
+                        "schema":{
+                            "type":"object",
+                            "properties":{
+                                "email":{
+                                    "type": "string"
+                                },
+                                "password":{
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"success"
+                    },
+                    "400":{
+                        "description":"User not found"
+                    }
+                }
+            }
+        },
+        "/api/products": {
+            "get": {
+                "tags": ["Products"],
+                "summary": "Returns a list of products",
+                "description": "Fetch all available products",
+                "security": [{ "JWT": {} }],
+                "responses": {
+                    "200": {
+                        "description": "List of products",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id": { "type": "integer" },
+                                            "name": { "type": "string" },
+                                            "desc": { "type": "string" },
+                                            "price": { "type": "number" },
+                                            "imageUrl": { "type": "string" },
+                                            "category": { "type": "string" },
+                                            "sizes": { 
+                                                "type": "array",
+                                                "items": { "type": "string" }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": { "description": "Error fetching products" }
+                }
+            }
         }
+
     }
 }
